--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -10,12 +10,12 @@ columns:
     width: 3
     children: 
       - url_text: Home
-        url: /index
+        url: /
   - type: links
     width: 3
     children: 
-      - url_text: Home
-        url: /index
+      - url_text: Example page
+        url: /example_page
   - type: image
     image_width: 88px
     width: 2
