example index page

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ description: "Example of ELIXIR toolkit theme as a remote jekyll theme"
 
 remote_theme: ELIXIR-Belgium/elixir-toolkit-theme@1.17.0
 
+exclude:
+  - README.md
+
 defaults:
   -
     scope:
