--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -46,6 +46,7 @@ jobs:
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+          PAGES_REPO_NWO: ${{ github.GITHUB_REPOSITORY }}
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
