--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ topnav_title: Website title
 description: "Example of ELIXIR toolkit theme as a remote jekyll theme"
 # Metadata description of the website
 
-remote_theme: ELIXIR-Belgium/elixir-toolkit-theme@2.2.2
+remote_theme: ELIXIR-Belgium/elixir-toolkit-theme@2.3.0
 
 exclude:
   - README.md
@@ -54,3 +54,10 @@ plugins:
   - jekyll-github-metadata
   - jemoji
   - webrick
+
+# --- Missing in gitlab: ---
+# github:
+#   repository_url: https://github.com/ELIXIR-Belgium/elixir-toolkit-theme
+#   source:
+#     branch: main
+
