--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Website title
+title: FLkit
 # This appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
-topnav_title: Website title
+topnav_title: FLKit
 # Optional: this appears on the top navigation bar next to the main_logo.svg icon
 
-description: "Example of ELIXIR toolkit theme as a remote jekyll theme"
+description: "Best practices and guidelines you can use when applying Federated Learning to your research"
 # Metadata description of the website
 
 remote_theme: ELIXIR-Belgium/elixir-toolkit-theme@3.0.0
