--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,15 @@ defaults:
 theme_variables: 
   # git_host: GitHub
   # back_to_top: true
+  # dev-info-banner: false
   # privacy_statement_url: /privacy
   # github_buttons: 
   #   position: top
   #   edit_me: true
   #   open_issue: true
   #   history: true
+  # datatables:
+  #   searchbuilder: True
   # headings:
   #   related-pages: Related pages
   #   more-information-tiles: More information
@@ -49,6 +52,9 @@ theme_variables:
     # brand_logo: assets/img/main_logo.svg
     # github: true
     # twitter: false
+    # bluesky: false
+    # linkedin: false
+    # fosstodon: false
   # theme_color: 0d6efd
   # fonts:
   #   - url towards a font
